--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "express": "^4.15.4",
     "morgan": "^1.8.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "mongoose": "^4.12.4"
   }
 }
